test/message/stdin_messages.out
[stdin]
[stdin]:1
with(this){__filename}
^^^^
SyntaxError: Strict mode code may not include a with statement
    at new Script (vm.js:*)
    at createScript (vm.js:*)
    at Object.runInThisContext (vm.js:*)
    at Object.<anonymous> ([stdin]-wrapper:*:*)
    at Module._compile (module.js:*:*)
    at evalScript (bootstrap_node.js:*:*)
    at Socket.<anonymous> (bootstrap_node.js:*:*)
    at Socket.emit (events.js:*:*)
    at endReadableNT (_stream_readable.js:*:*)
    at process._tickCallback (internal/process/next_tick.js:*:*)
42
42
[stdin]:1
throw new Error("hello")
^

Error: hello
    at [stdin]:1:7
    at Script.runInThisContext (vm.js:*)
    at Object.runInThisContext (vm.js:*)
    at Object.<anonymous> ([stdin]-wrapper:*:*)
    at Module._compile (module.js:*:*)
    at evalScript (bootstrap_node.js:*:*)
    at Socket.<anonymous> (bootstrap_node.js:*:*)
    at Socket.emit (events.js:*:*)
    at endReadableNT (_stream_readable.js:*:*)
    at process._tickCallback (internal/process/next_tick.js:*:*)
[stdin]:1
throw new Error("hello")
^

Error: hello
    at [stdin]:1:*
    at Script.runInThisContext (vm.js:*)
    at Object.runInThisContext (vm.js:*)
    at Object.<anonymous> ([stdin]-wrapper:*:*)
    at Module._compile (module.js:*:*)
    at evalScript (bootstrap_node.js:*:*)
    at Socket.<anonymous> (bootstrap_node.js:*:*)
    at Socket.emit (events.js:*:*)
    at endReadableNT (_stream_readable.js:*:*)
    at process._tickCallback (internal/process/next_tick.js:*:*)
100
[stdin]:1
var x = 100; y = x;
               ^

ReferenceError: y is not defined
    at [stdin]:1:16
    at Script.runInThisContext (vm.js:*)
    at Object.runInThisContext (vm.js:*)
    at Object.<anonymous> ([stdin]-wrapper:*:*)
    at Module._compile (module.js:*:*)
    at evalScript (bootstrap_node.js:*:*)
    at Socket.<anonymous> (bootstrap_node.js:*:*)
    at Socket.emit (events.js:*:*)
    at endReadableNT (_stream_readable.js:*:*)
    at process._tickCallback (internal/process/next_tick.js:*:*)

[stdin]:1
var ______________________________________________; throw 10
                                                    ^
10

[stdin]:1
var ______________________________________________; throw 10
                                                    ^
10
done
